salesforce_sfdx/main/default/objects/OSFMX_ConsumptionOtherFuels__c/OSFMX_ConsumptionOtherFuels__c.object-meta.xml
<CustomObject>
    <label>Consumo Otros Combustibles</label>
    <nameField>
        <label>Consumo Otros Combustibles</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumos Otros Combustibles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>