salesforce_sfdx/main/default/objects/OSFMX_ConsumptionOtherFuels__c/fields/OSFMX_AnnualConsumptionFuel__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AnnualConsumptionFuel__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Consumo anual de combustible</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>