salesforce_sfdx/main/default/objects/OSFMX_ConsumptionOtherFuels__c/fields/OSFMX_FuelType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_FuelType__c</fullName>
    <label>Tipo de combustible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aceite reciclado</fullName>
            </value>
            <value>
                <fullName>Combusteco</fullName>
            </value>
            <value>
                <fullName>Combustoleo</fullName>
            </value>
            <value>
                <fullName>Coque</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Gas Lp</fullName>
            </value>
            <value>
                <fullName>Heavy oil</fullName>
            </value>
            <value>
                <fullName>Zuavit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>